--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Wrapper for three.js",
   "main": "build/three-js-wrapper.js",
   "module": "build/three-js-wrapper.module.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lostways/three-js-wrapper"
+  },
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
