--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "lostways",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^7.20.0",
     "rollup": "^1.21.4",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-copy": "^3.1.0",
