--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "author": "lostways",
   "license": "MIT",
   "devDependencies": {
+    "@lopatnov/rollup-plugin-uglify": "^2.1.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^8.2.0",
     "eslint": "^7.20.0",
-    "rollup": "^1.21.4",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-copy": "^3.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-uglify": "^6.0.3"
+    "rollup": "^2.0.0",
+    "terser": "^4.8.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.2"
   },
   "dependencies": {
     "three": "^0.108.0"
