--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "target": "es2018"
+    "target": "es2015",
+    "strict": true
   },
   "include": ["./src/**/*.ts"]
 }
