--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   "license": "MIT",
   "devDependencies": {
     "@lopatnov/rollup-plugin-uglify": "^2.1.0",
-    "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@types/three": "^0.126.0",
     "eslint": "^7.20.0",
     "rollup": "^2.0.0",
     "terser": "^4.8.0",
@@ -26,6 +26,6 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "three": "^0.108.0"
+    "three": "^0.126.0"
   }
 }
