--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^7.20.0",
     "http-server": "^0.12.3",
     "rollup": "^2.0.0",
+    "rollup-pluginutils": "^2.8.2",
     "terser": "^4.8.0",
     "tslib": "^2.1.0",
     "typescript": "^4.2.2"
