--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/three": "^0.126.0",
+    "dat.gui": "^0.7.7",
     "eslint": "^7.20.0",
     "http-server": "^0.12.3",
     "rollup": "^2.0.0",
