--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/three": "^0.126.0",
+    "canvas": "^2.11.0",
     "dat.gui": "^0.7.7",
     "eslint": "^7.20.0",
     "http-server": "^14.1.1",
+    "jsdom": "^20.0.3",
+    "mocha": "^10.2.0",
     "rollup": "^2.0.0",
     "rollup-pluginutils": "^2.8.2",
     "terser": "^4.8.0",
