--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "test": "node test/test-server.js",
+    "test": "karma start test/karma.conf.js",
     "serve": "http-server"
   },
   "author": "lostways",
@@ -19,13 +19,19 @@
     "@lopatnov/rollup-plugin-uglify": "^2.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
     "@types/three": "^0.126.0",
-    "canvas": "^2.11.0",
     "chai": "^4.3.7",
     "dat.gui": "^0.7.7",
     "eslint": "^7.20.0",
     "http-server": "^14.1.1",
-    "live-server": "^1.2.2",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-typescript": "^5.5.3",
+    "karma-typescript-es6-transform": "^5.5.3",
     "mocha": "^10.2.0",
     "rollup": "^2.0.0",
     "rollup-pluginutils": "^2.8.2",
