--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "karma-typescript-es6-transform": "^5.5.3",
     "mocha": "^10.2.0",
     "prettier": "^2.8.1",
+    "puppeteer": "^19.4.1",
     "rollup": "^2.0.0",
     "rollup-pluginutils": "^2.8.2",
+    "sinon": "^15.0.1",
     "terser": "^4.8.0",
     "tslib": "^2.1.0",
     "typescript": "^4.2.2"
