--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "description": "Wrapper for three.js",
   "main": "build/three-js-wrapper.js",
+  "typings": "build/three-js-wrapper.d.ts",
   "module": "build/three-js-wrapper.module.js",
   "repository": {
     "type": "git",
@@ -22,7 +23,7 @@
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
-    "@types/three": "^0.126.0",
+    "@types/three": "^0.154.0",
     "chai": "^4.3.7",
     "dat.gui": "^0.7.7",
     "eslint": "^7.20.0",
@@ -37,6 +38,7 @@
     "prettier": "^2.8.1",
     "puppeteer": "^19.4.1",
     "rollup": "^2.0.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "rollup-pluginutils": "^2.8.2",
     "sinon": "^15.0.1",
     "terser": "^4.8.0",
