--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "three-js-wrapper",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Wrapper for three.js",
   "main": "build/three-js-wrapper.js",
   "typings": "build/three-js-wrapper.d.ts",
@@ -51,6 +51,6 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
-    "three": "^0.154.0"
+    "three": "*"
   }
 }
