--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
   "author": "lostways",
   "license": "MIT",
   "devDependencies": {
+    "@types/three": "^0.154.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "rollup": "^2.0.0",
+    "rollup-plugin-typescript2": "^0.36.0",
+    "typescript": "^5.3.3",
+    "terser": "^5.26.0",
     "@lopatnov/rollup-plugin-uglify": "^2.1.0",
     "@microsoft/api-documenter": "^7.23.9",
     "@microsoft/api-extractor": "^7.38.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-typescript": "^8.2.0",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
-    "@types/three": "^0.154.0",
     "chai": "^4.3.7",
     "dat.gui": "^0.7.7",
     "eslint": "^7.20.0",
@@ -42,15 +46,11 @@
     "mocha": "^10.2.0",
     "prettier": "^2.8.1",
     "puppeteer": "^19.4.1",
-    "rollup": "^2.0.0",
-    "rollup-plugin-typescript2": "^0.36.0",
     "rollup-pluginutils": "^2.8.2",
     "sinon": "^15.0.1",
-    "terser": "^4.8.0",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.2"
+    "tslib": "^2.1.0"
   },
   "dependencies": {
-    "three": "*"
+    "three": "^0.154.0"
   }
 }
