--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "1.2.0",
   "description": "Wrapper for three.js",
   "main": "build/three-js-wrapper.js",
-  "typings": "build/three-js-wrapper.d.ts",
   "module": "build/three-js-wrapper.module.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/lostways/three-js-wrapper"
   },
   "scripts": {
-    "format": "prettier --write index.ts src test examples",
-    "build": "rollup -c rollup.config.js",
+    "format": "prettier --write index.js src test examples",
+    "build": "rollup --bundleConfigAsCjs -c rollup.config.js",
     "test": "karma start test/karma.conf.js",
     "serve": "http-server",
     "build-api-docs-model": "api-extractor run --local --verbose",
@@ -21,18 +20,11 @@
   "author": "lostways",
   "license": "MIT",
   "devDependencies": {
-    "@types/three": "^0.154.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "rollup": "^2.0.0",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.3.3",
-    "terser": "^5.26.0",
     "@lopatnov/rollup-plugin-uglify": "^2.1.0",
     "@microsoft/api-documenter": "^7.23.9",
     "@microsoft/api-extractor": "^7.38.0",
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
     "chai": "^4.3.7",
     "dat.gui": "^0.7.7",
     "eslint": "^7.20.0",
@@ -41,16 +33,13 @@
     "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-typescript": "^5.5.3",
-    "karma-typescript-es6-transform": "^5.5.3",
     "mocha": "^10.2.0",
     "prettier": "^2.8.1",
     "puppeteer": "^19.4.1",
-    "rollup-pluginutils": "^2.8.2",
-    "sinon": "^15.0.1",
-    "tslib": "^2.1.0"
+    "rollup": "^4.34.9",
+    "sinon": "^15.0.1"
   },
   "dependencies": {
-    "three": "^0.154.0"
+    "three": "^0.161.0"
   }
 }
