--- a/package.json
+++ b/package.json
@@ -25,20 +25,22 @@
     "@microsoft/api-extractor": "^7.38.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "chai": "^4.3.7",
+    "chai": "^4.5.0",
     "dat.gui": "^0.7.7",
     "eslint": "^7.20.0",
     "http-server": "^14.1.1",
-    "karma": "^6.4.1",
+    "karma": "^6.4.4",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
+    "karma-sinon": "^1.0.5",
     "karma-webpack": "^5.0.1",
     "mocha": "^10.2.0",
     "prettier": "^2.8.1",
     "puppeteer": "^19.4.1",
     "rollup": "^4.34.9",
-    "sinon": "^15.0.1",
+    "sinon": "^15.2.0",
     "webpack": "^5.98.0"
   },
   "dependencies": {
