--- a/package.json
+++ b/package.json
@@ -11,23 +11,19 @@
   "scripts": {
     "format": "prettier --write index.js src test examples",
     "build": "rollup --bundleConfigAsCjs -c rollup.config.js",
-    "test": "karma start test/karma.conf.js",
+    "test": "npm run build && karma start test/karma.conf.js",
     "serve": "http-server",
-    "build-api-docs-model": "api-extractor run --local --verbose",
-    "build-api-docs-md": "api-documenter markdown -i ./dist -o ./docs",
-    "build-api-docs": "npm run build-api-docs-model && npm run build-api-docs-md"
   },
   "author": "lostways",
   "license": "MIT",
   "devDependencies": {
-    "@lopatnov/rollup-plugin-uglify": "^2.1.0",
     "@microsoft/api-documenter": "^7.23.9",
     "@microsoft/api-extractor": "^7.38.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "chai": "^4.5.0",
+    "chai": "4.3.4",
     "dat.gui": "^0.7.7",
-    "eslint": "^7.20.0",
+    "eslint": "^9.21.0",
     "http-server": "^14.1.1",
     "karma": "^6.4.4",
     "karma-chai": "^0.1.0",
@@ -35,13 +31,13 @@
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sinon": "^1.0.5",
-    "mocha": "^10.2.0",
-    "prettier": "^2.8.1",
-    "puppeteer": "^19.4.1",
+    "mocha": "^11.1.0",
+    "prettier": "^3.5.3",
+    "puppeteer": "^24.3.0",
     "rollup": "^4.34.9",
-    "sinon": "^15.2.0"
+    "sinon": "^19.0.2"
   },
   "dependencies": {
-    "three": "^0.161.0"
+    "three": "^0.174.0"
   }
 }
