--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "22.x"
-      - run: npm ci
+      - run: yarn install --frozen-lockfile
       - run: npm run format
       - name: commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
