--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write index.js src test examples",
     "build": "rollup --bundleConfigAsCjs -c rollup.config.js",
     "test": "npm run build && karma start test/karma.conf.js",
-    "serve": "http-server",
+    "serve": "http-server"
   },
   "author": "lostways",
   "license": "MIT",
