--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,5 +12,10 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: "22.x"
-    - run: yarn install --frozen-lockfile
-    - run: npm run test
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile
+    - name: Run tests
+      run: |
+        export CHROME_BIN=/usr/bin/google-chrome
+        export CHROME_OPTIONS=--no-sandbox
+        npm run test
