--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,15 +7,12 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:22.14.0
+      options: --shm-size=2g
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: "22.x"
     - name: Install dependencies
       run: yarn install --frozen-lockfile
     - name: Run tests
-      run: |
-        export CHROME_BIN=/usr/bin/google-chrome
-        export CHROME_OPTIONS=--no-sandbox
-        npm run test
+      run: npm run test
