--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -6,16 +6,16 @@ jobs:
   format:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v4
         with:
-          node-version: "16.x"
-      - run: npm ci
+          node-version: "22.x"
+      - run: yarn install --frozen-lockfile
       - run: npm run format
       - name: commit changes
-        uses: stefanzweifel/git-auto-commit-action@v4.1.2
+        uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: apply auto formatting
           branch: ${{ github.head_ref }}
