--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,10 +7,12 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:22.14.0
+      options: --shm-size=2g
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: "16.x"
-    - run: npm ci
-    - run: npm run test
+    - uses: actions/checkout@v4
+    - name: Install dependencies
+      run: yarn install --frozen-lockfile
+    - name: Run tests
+      run: npm run test
