--- a/package.json
+++ b/package.json
@@ -3,54 +3,41 @@
   "version": "1.2.0",
   "description": "Wrapper for three.js",
   "main": "build/three-js-wrapper.js",
-  "typings": "build/three-js-wrapper.d.ts",
   "module": "build/three-js-wrapper.module.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/lostways/three-js-wrapper"
   },
   "scripts": {
-    "format": "prettier --write index.ts src test examples",
-    "build": "rollup -c rollup.config.js",
-    "test": "karma start test/karma.conf.js",
-    "serve": "http-server",
-    "build-api-docs-model": "api-extractor run --local --verbose",
-    "build-api-docs-md": "api-documenter markdown -i ./dist -o ./docs",
-    "build-api-docs": "npm run build-api-docs-model && npm run build-api-docs-md"
+    "format": "prettier --write index.js src test examples",
+    "build": "rollup --bundleConfigAsCjs -c rollup.config.js",
+    "test": "npm run build && karma start --browsers=ChromeHeadlessNoSandbox test/karma.conf.js",
+    "serve": "http-server"
   },
   "author": "lostways",
   "license": "MIT",
   "devDependencies": {
-    "@lopatnov/rollup-plugin-uglify": "^2.1.0",
     "@microsoft/api-documenter": "^7.23.9",
     "@microsoft/api-extractor": "^7.38.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-typescript": "^8.2.0",
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^10.0.1",
-    "@types/three": "^0.154.0",
-    "chai": "^4.3.7",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "chai": "4.3.4",
     "dat.gui": "^0.7.7",
-    "eslint": "^7.20.0",
+    "eslint": "^9.21.0",
     "http-server": "^14.1.1",
-    "karma": "^6.4.1",
+    "karma": "^6.4.4",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-typescript": "^5.5.3",
-    "karma-typescript-es6-transform": "^5.5.3",
-    "mocha": "^10.2.0",
-    "prettier": "^2.8.1",
-    "puppeteer": "^19.4.1",
-    "rollup": "^2.0.0",
-    "rollup-plugin-typescript2": "^0.36.0",
-    "rollup-pluginutils": "^2.8.2",
-    "sinon": "^15.0.1",
-    "terser": "^4.8.0",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.2"
+    "karma-sinon": "^1.0.5",
+    "mocha": "^11.1.0",
+    "prettier": "^3.5.3",
+    "puppeteer": "^24.3.0",
+    "rollup": "^4.34.9",
+    "sinon": "^19.0.2"
   },
   "dependencies": {
-    "three": "*"
+    "three": "^0.174.0"
   }
 }
